Fixes to version support